--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,3 +1,23 @@
+body:hover {
+    background-color: black;
+}
+
+section:hover {
+    background-color: black;
+}
+
+h1 {
+    text-align: center;
+    background-color: #ff5fffa7;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 2.5em;
+}
+
+h1:hover {
+    background-color: black;
+    color: #fb4bfbd0;
+}
+
 .pokemons {
     display: grid;
     grid-template-columns: 1fr;
